# StellerFund

./: .gitignore  .vercelignore  App.css  App.jsx  CLI_COMMANDS.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  index.html  package-lock.json  package.json  stellar.js  tsconfig.json  vercel.json
.github/workflows/: main.yml
apps/web/: README.md  index.html  package-lock.json  package.json  package.tmp.json  tailwind.config.ts  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/layout/: StarfieldBackground.tsx
apps/web/src/components/ui/: command.tsx  textarea.tsx
apps/web/src/features/wallet/: EscrowDashboard.tsx  SendXLM.tsx  WalletHeader.tsx  freighter.ts
apps/web/src/lib/: config.ts  soroban.ts
apps/web/src/pages/: AppPage.tsx  Index.tsx  NotFound.tsx
components/: Header.jsx  Readme.md  SendXLM.jsx
components/stellarfund/: Cargo.toml
contracts/hello_world/: Cargo.toml  README.md
contracts/hello_world/src/: error.rs  event.rs  lib.rs  storage.rs  test.rs
contracts/stellar_fund/: Cargo.toml  READme.md
contracts/stellar_fund/src/: lib.rs  test.rs
contracts/stf_token/: Cargo.toml  README.md
contracts/stf_token/src/: lib.rs
public/: index.html
src/: App.jsx  Cargo.toml  index.css  lib.rs  test.rs
src/components/: Header.jsx
src/lib/: freighter.js
src/pages/: Escrow.jsx  Home.jsx
workflows/: ci.yml
