[workspace]
resolver = "2"
members = [
    "contracts/hello_world",
    "contracts/stf_token",
]

[workspace.dependencies]
soroban-sdk = "=21.7.7"
stellar-tokens = "=0.5.0"
stellar-access = "=0.5.0"
stellar-contract-utils = "=0.5.0"
stellar-macros = "=0.5.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
